--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,10 @@
 buildscript {
     repositories {
         jcenter()
+
+        maven  {
+            url "http://repo1.maven.org/maven2"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.5.0'
@@ -15,6 +19,10 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+
+        maven  {
+            url "http://repo1.maven.org/maven2"
+        }
     }
 }
 
